@@ -8,9 +8,9 @@ scripts=[
   "bin/rtpbleed",
   "bin/rtpbleedflood",
   "bin/rtpbleedinject",
-  "bin/sipcrack",
+  "bin/sipdigestcrack",
   "bin/sipdigestleak",
-  "bin/sipdump",
+  "bin/sippcapdump",
   "bin/sipenumerate",
   "bin/sipexten",
   "bin/sipflood",
