@@ -84,7 +84,7 @@ class Logo:
 ▀▄▄▄▄▄▀▄▄▄▀▄▄▄▀▀▀▀▀▄▄▄▄▄▀▄▄▄▀▀▄▄▀▀▄▄▄▄▀▀▄▄▄▀▄▄▄▀▄▄▄▄▄▀▄▄▀▄▄▀▄▄▀▄▄▀▀▄▄▄▀▀▄▄▄▄▄▀
             '''
 
-        if self.script == 'sipdump':
+        if self.script == 'sippcapdump':
             return '''
 ██████████████████████████████████████████████
 █─▄▄▄▄█▄─▄█▄─▄▄─███▄─▄▄▀█▄─██─▄█▄─▀█▀─▄█▄─▄▄─█
